# obsidian_collab

./: .gitignore  README.md  esbuild.config.mjs  package-lock.json  package.json  styles.css
docs/: collab_protocol.drawio
plugin/: .eslintrc  .gitignore  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json  version-bump.mjs
plugin/src/: collab_proto.ts  connection_provider.ts  doc_manager.ts  doc_resolver.ts  item_resolver.tsx  main.tsx  plugin_inst.ts  settings.ts
plugin/src/editor/: collab_sync_plugin.ts  debug_view_plugin.tsx  editor_plugin.ts  y-range.ts  y-remote-selections.ts  y-sync.ts  y-undomanager.ts
plugin/src/networking/: connection.ts  proto_c2s.ts  proto_s2c.ts  proto_shared.ts  rpc_channel.ts  targeted_event_channel.ts
plugin/src/typings/: obsidian.d.ts
plugin/src/ui/: debug_view.tsx  modals.tsx  static_components.tsx
plugin/src/utils/: event_channel.ts  file_suggest.ts  logger.ts  reactivity.ts  targeted_event_channel.ts  valuemap.ts
plugin/static/: manifest.json  styles.css
server/: .gitignore  Cargo.toml
server/src/: app.rs  args.rs  client_repr.rs  collab_proto.rs  doc_provider.rs  errors.rs  main.rs  repl.rs  webserver.rs
server/src/utils/: constants.rs  mod.rs  or_log.rs  poisonless_lock.rs
src/: components.tsx  item_resolver.tsx  main.tsx
src/editor/: debug_view_plugin.tsx  y-sync.ts
