[package]
name = "collab-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
log = "0.4.29"
rustyline-async = "0.4.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.18.0", features = ["base64"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
yrs = { version = "0.25.0", features = ["sync"] }
